fixed filter box getting cut off

--- a/src/css/filter.css
+++ b/src/css/filter.css
@@ -71,6 +71,7 @@
   color: rgba(51,51,51,0.75);
   font-style: italic;
   font-size: 14px;
+  height: auto;
 }
 
 .protograph-filter-item-name {
@@ -126,7 +127,7 @@
   overflow: hidden;
 }
 .protograph-filter-item-detail.protograph-show-more-filters > .protograph-filter-body {
-  max-height: 1000px;
+  max-height: 1950px;
   transition: max-height 350ms ease-out;
 }
 .protograph-filter-body {
